# prepatec-soccer-analytics-evaluations

./: .gitignore  AI-MANIFESTO.md  CLAUDE.md  MIGRATION-GUIDE.md  README-PRIVADO.md  README-REFACTORIZADO.md  README.md  RESUMEN-EJECUTIVO-REFACTORIZACION.md  SECURITY.md  convert-all.sh  convert_all_python.py  ejercicio-semana-02-estructuras.md  ejercicio-semana-03-funciones.md  ejercicio-semana-04-pandas-numpy.md  ejercicio-semana-05-visualizacion.md  pyproject.toml  requirements.txt  rubrica-ejercicios-semanales.md  test-converted-fixed.txt  test-converted.txt
.github/: copilot-instructions.md
.github/prompts/: commit.prompt.md
bloque-1/: README.md  formato-nombres-archivo.md  rubrica-unificada-bloque1.md
bloque-1/canvas/: INSTRUCCIONES_QTI_CANVAS.md  MARKDOWN_FORMAT.md  README.md  SOURCES_AND_REFERENCES.md  TECHNICAL_DETAILS.md  USAGE_GUIDE.md  banco-preguntas-bloque1.json  banco-preguntas-bloque1.md  banco-preguntas-bloque1.txt  banco-preguntas-bloque1_kansas.csv  csv_to_kansas_qti.py  extract_all_questions.py  generar_qti.py  generate_qti.py  generate_qti_canvas.py  md_to_csv_direct.py  txt_to_csv_direct.py
bloque-1/caso-practico/: caso-bloque1.md
bloque-1/datasets/: README.md  datos_equipo.py  futbol-basico.csv  jugadores_rendimiento.csv  temporada_club.csv
bloque-1/ejercicios/: ejercicio-semana-1-fundamentos.md  ejercicio-semana-2-estructuras.md  ejercicio-semana-4-pandas-numpy.md
bloque-1/ejercicios-semanales/: README.md  ejercicio-semana-1-fundamentos.md  ejercicio-semana-2-estructuras.md  ejercicio-semana-3-funciones.md  ejercicio-semana-4-pandas-numpy.md  ejercicio-semana-5-visualizacion.md
bloque-1/proyecto/: README.md  equipos.csv  jugadores.csv
bloque-1/proyecto-integrador/: partidos.csv
bloque-1/rubricas/: README.md
bloque-1/solucion-caso-practico/: README.md  caso_bloque1_equipoSOLUCION.py  solucion_caso_bloque1.ipynb  solucion_caso_bloque1.md  solucion_caso_bloque1_simple.ipynb
bloque-1/soluciones-instructor/: README.md
bloque-2/: README.md
bloque-2/canvas/: banco-preguntas-bloque2.md  banco-preguntas-bloque2.txt  banco-preguntas-bloque2.txt.checksum  generar_qti.py
bloque-2/caso-practico/: caso-bloque2.md
bloque-2/datasets/: README.md  eventos_partidos.csv  jugadores_liga_juvenil.csv  partidos_detalle.csv
bloque-2/ejercicios/: ejercicio-semana-10-analisis.md
bloque-2/ejercicios-preparatorios/: README.md  ejercicio-semana-6-exploracion.md  ejercicio-semana-7-tipos-datos.md  ejercicio-semana-8-estadistica.md  ejercicio-semana-9-visualizacion.md
bloque-2/ejercicios-semanales/: README.md  ejercicio-semana-10-analisis.md  ejercicio-semana-6-exploracion.md
bloque-2/proyecto/: equipos_estadisticas.csv  jugadores_rendimiento.csv
bloque-2/proyecto-analisis/: README.md  factores_contextuales.csv  partidos_liga_3_temporadas.csv
bloque-2/rubricas/: README.md
bloque-2/solucion-caso-practico/: README.md  caso_bloque2_equipoSOLUCION.py  scouting_analysis_solucion.ipynb  scouting_analysis_solucion.md
bloque-2/soluciones-instructor/: README.md
bloque-3/: README.md
bloque-3/canvas/: banco-preguntas-bloque3.md  banco-preguntas-bloque3.txt  banco-preguntas-bloque3.txt.checksum  banco-preguntas-bloque3_kansas.csv  generar_qti.py  preguntas-bloque-3.txt
bloque-3/caso-practico/: README.md  caso-bloque3.md
bloque-3/datasets/: README.md  champions_league_matches.csv
bloque-3/ejercicios-practica/: README.md  ejercicio-semana-11-modelado.md  ejercicio-semana-12-modelos-avanzados.md  ejercicio-semana-13-evaluacion.md  (+1 more)
canvas/: banco-preguntas-bloque1.md  banco-preguntas-bloque2.md
casos-practicos/: caso-bloque1.md  caso-bloque2.md
datasets/: README.md  equipos-europa-2023-24.csv  jugadores-estrellas-2024.csv
evaluaciones/: __init__.py  batch_converter.py  cli.py  format_converter.py  validator.py
periodo-1/: README.md
periodo-2/: README.md
periodo-3/: README.md
rubricas/: rubrica-completa.md
(+53 files in other folders)
